--- a/app/src/main/res/layout/buy_and_sell_show_layout.xml
+++ b/app/src/main/res/layout/buy_and_sell_show_layout.xml
@@ -9,6 +9,7 @@
     android:paddingLeft="@dimen/padding_bit">
 
     <LinearLayout
+        android:id="@+id/linearLayout_attached"
         android:paddingTop="@dimen/padding_medium"
         android:paddingBottom="@dimen/padding_large"
         android:layout_marginBottom="@dimen/padding_large"
@@ -66,16 +67,16 @@
 
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView_buy_and_sell"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    </android.support.v7.widget.RecyclerView>
-
-    <TextView
-        android:visibility="invisible"
+    <android.support.v7.widget.RecyclerView
+        android:layout_below="@id/linearLayout_attached"
+        android:id="@+id/recyclerView_buy_and_sell"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_item_height" />
+        android:layout_height="wrap_content"/>
+
+    </LinearLayout>
 
 </LinearLayout>
