--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -35,7 +35,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/shape_underline"
-                android:backgroundTint="@color/divider"
+                android:backgroundTint="@color/shiri"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
