--- a/app/src/main/res/layout/buy_and_sell_show_item.xml
+++ b/app/src/main/res/layout/buy_and_sell_show_item.xml
@@ -40,6 +40,7 @@
             android:layout_marginLeft="@dimen/padding_large">
 
             <ImageView
+                android:padding="@dimen/padding_small"
                 android:adjustViewBounds="true"
                 android:id="@+id/imageView_buy_and_sell_label"
                 android:layout_width="@dimen/dimen_xxmedium"
